# PaddleDesk

./: .gitignore  LICENSE  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
site/: en.html  index.html  robots.txt  sitemap.xml
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  model.rs  native.rs
src-tauri/src/api/: credentials.rs  mock.rs  mod.rs  normalize.rs  paddle.rs  token_store.rs
src-tauri/src/capture/: desktop.rs  mod.rs  windows.rs
src-tauri/src/export/: mod.rs
src-tauri/src/queue/: mod.rs  tests.rs
src-tauri/src/storage/: mod.rs
src-tauri/tests/fixtures/: ppocrv6_image.json  structurev3_image.json  vl16_page101.json  vl16_pdf.json
src/__tests__/: bbox.test.ts  drop-zone.test.tsx  files.test.ts  format.test.ts  home.test.tsx  i18n.test.ts  ipc.test.ts  onboarding.test.tsx  p4-desktop.test.tsx  queue.test.tsx  responsive.test.ts  shell.test.tsx  store.test.ts  task3-events.test.tsx  task5-views.test.tsx  updater.test.tsx  viewer.test.tsx
src/components/: ConfirmDialog.tsx  DropZone.tsx  Onboarding.tsx  OriginalPane.tsx  PdfPage.tsx  ResultPane.tsx  ServiceCards.tsx  Sidebar.tsx  TaskRowItem.tsx  TopBar.tsx  UpdatePrompt.tsx  UsageRing.tsx
src/i18n/: en.json  index.ts  zh-CN.json
src/lib/: bbox.ts  files.ts  format.ts  ipc.ts
src/stores/: app.ts
src/views/: History.tsx  Home.tsx  Queue.tsx  Settings.tsx  Usage.tsx  Viewer.tsx
