[package]
name = "paddledesk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paddledesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.27"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json", "multipart", "system-proxy"] }
lopdf = { version = "0.38", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["windows-native"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6.5"
